use cases updated

--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -453,7 +453,7 @@
 \item \textbf{توضیح اجمالی:}\\
 کاربر در سایت ثبت نام میکند.
 \item \textbf{کنشگر اصلی:}\\
-کارمند
+مشتری
 \item \textbf{کنشگر فرعی:}\\
 ندارد
 \item \textbf{شرایط اولیه:}\\
@@ -486,11 +486,11 @@
 \item \textbf{توضیح اجمالی:}\\
 کاربر اطلاعات خود را مشاهده کرده و میتواند اطلاعات خود را ویرایش کند.
 \item \textbf{کنشگر اصلی:}\\
-کارمند
+مشتری
 \item \textbf{کنشگر فرعی:}\\
 ندارد
 \item \textbf{شرایط اولیه:}\\
-کاربر وارد داشبورد کارمند(مشتری) شده باشد.
+کاربر وارد داشبورد شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
 \item  این مورد کاربرد با درخواست کاربر برای مشاهده اطلاعات در داشبورد شروع میشود
@@ -520,11 +520,11 @@
 \item \textbf{توضیح اجمالی:}\\
 کاربر مقدار اعتبار هر ارز مربوط به کیف پول خود را مشاهده میکند.
 \item \textbf{کنشگر اصلی:}\\
-کارمند
+مشتری
 \item \textbf{کنشگر فرعی:}\\
 ندارد
 \item \textbf{شرایط اولیه:}\\
-کاربر وارد داشبورد کارمند(مشتری) شده باشد.
+کاربر وارد داشبورد  شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
 \item  این مورد کاربرد با درخواست کاربر برای مشاهده کیف پول در داشبورد شروع میشود
@@ -547,11 +547,11 @@
 \item \textbf{توضیح اجمالی:}\\
 کاربر اعتبار ریالی کیف پول خود را افزایش میدهد.
 \item \textbf{کنشگر اصلی:}\\
-کارمند
+مشتری
 \item \textbf{کنشگر فرعی:}\\
 ندارد
 \item \textbf{شرایط اولیه:}\\
-کاربر وارد داشبورد کارمند(مشتری) شده باشد.
+کاربر وارد داشبورد شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
 \item  این مورد کاربرد با درخواست کاربر برای مشاهده کیف پول در داشبورد شروع میشود
@@ -656,6 +656,293 @@
 \end{enumerate}
 \item \textbf{شرایط پایانی:}\\ 
 در (دیتابیس) سامانه روش اطلاع رسانی مربوط به کاربر با توجه به روش انتخابی اش ذخیره شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+تعیین روش اطلاع رسانی به مشتری
+\item \textbf{شناسه:}\\
+19
+\item \textbf{توضیح اجمالی:}\\
+کاربر نحوه اطلاع رسانی بخود را مشخص میکند
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مشتری شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای تعیین روش اطلاع رسانی در داشبورد شروع میشود
+\item سامانه صفحه انتخاب روش اطلاع رسانی را به کاربر نمایش میدهد
+\item کاربر یکی از دو گزینه اطلاع رسانی با پیامک و اطلاع رسانی با ایمیل را انتخاب میکند.
+\item  سامانه پیغام «انتخاب روش اطلاع رسانی موفق» را نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+در (دیتابیس) سامانه روش اطلاع رسانی مربوط به کاربر با توجه به روش انتخابی اش ذخیره شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده تمامی تراکنشها
+\item \textbf{شناسه:}\\
+20
+\item \textbf{توضیح اجمالی:}\\
+مدیر میتواند تمامی تراکنشها را مشاهده میکند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مدیر(ادمین) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تمامی تراکنشها در داشبورد شروع میشود
+\item سامانه صفحه مربوط به تمامی تراکنشها را به کاربر نمایش میدهد
+\item کاربر لاگ مربوط به تراکنشها را مشاهده میکند.
+\item  در صورتی که کاربر قسمت جزییات مربوط به هرکدام از تراکنشها را انتخاب کند
+\item سامانه صفحه جزییات مربوط به تراکنش انتخابی شامل وضعیت بررسی تراکنش، مشتری مربوط به تراکنش، کارمند مربوط به تراکنش، نام و مقدار هزینه تراکنش، اطلاعات اضافی، فایلهای آپلود شده و نظر کارمند موردنظر را نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده لیست مشتریان
+\item \textbf{شناسه:}\\
+21
+\item \textbf{توضیح اجمالی:}\\
+مدیر میتواند تمامی مشتریها را مشاهده میکند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مدیر(ادمین) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تمامی  مشتریها در داشبورد شروع میشود
+\item سامانه صفحه مربوط به تمامی مشتریها را به کاربر نمایش میدهد
+\item کاربر نام هر یک از مشتریها را مشاهده میکند.
+\item  در صورتی که کاربر قسمت جزییات مربوط به هرکدام از مشتریها را انتخاب کند
+\item سامانه صفحه جزییات مربوط به مشتری انتخابی شامل اطلاعات پروفایل مشتری(نام و نام خانوادگی، نام کاربری، ایمیل، شماره تلفن) و اطلاعات کیف پول(مقدار پول در هر کدام یک از ارزها) را نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده لیست کارمندان
+\item \textbf{شناسه:}\\
+22
+\item \textbf{توضیح اجمالی:}\\
+مدیر میتواند تمامی کارمندان را مشاهده میکند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مدیر(ادمین) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تمامی  کارمندان در داشبورد شروع میشود
+\item سامانه صفحه مربوط به تمامی کارمندان را به کاربر نمایش میدهد
+\item کاربر نام هر یک از کارمندان را مشاهده میکند.
+\item  در صورتی که کاربر قسمت جزییات مربوط به هرکدام از کارمندان را انتخاب کند
+\item سامانه صفحه جزییات مربوط به کارمند انتخابی شامل اطلاعات پروفایل کارمند(نام و نام خانوادگی، نام کاربری، ایمیل، شماره تلفن) و اطلاعات کیف پول(مقدار پول در هر کدام یک از ارزها) و مقدار حقوق دریافتی کارمند را نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+قطع دسترسی یک مشتری یا کارمند
+\item \textbf{شناسه:}\\
+23
+\item \textbf{توضیح اجمالی:}\\
+مدیر میتواند دسترسی یک مشتری یا کارمند را از سامانه قطع کند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مدیر(ادمین) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تمامی کارمندان یا مشتریان در داشبورد شروع میشود
+\item سامانه صفحه مربوط به تمامی کارمندان یا مشتریان را به کاربر نمایش میدهد
+\item کاربر نام هر یک از کارمندان یا مشتریان را مشاهده میکند.
+\item  در صورتی که کاربر قسمت قطع دسترسی مربوط به هرکدام از کارمندان یا مشتریان را انتخاب کند
+\item پیغام «قطع دسترسی موفق» به کاربر نمایش داده میشود.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+در هنگام ورود کارمند یا مشتری ممنوع شده به سامانه، پیام «ورود ممنوع» به کاربر نشان داده میشود و کاربر نمیتواند وارد سامانه شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+ورود به سامانه
+\item \textbf{شناسه:}\\
+24
+\item \textbf{توضیح اجمالی:}\\
+کاربر وارد سامانه میشود.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+ندارد
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای ورود به سامانه شروع میشود
+\item سامانه صفحه ورود را به کاربر نمایش میدهد
+\item کاربر قسمتهای نام کاربری و رمز عبور را پر میکند.
+\item کاربر گزینه ورود را انتخاب میکند
+\item در صورتی که هر کدام از قسمتهای ذکر شده در ۳ خالی بماند، سیستم پیام «اطلاعات ناقص» را نمایش میدهد و به ۳ میرود.
+\item  در صورتی که نام کاربری وجود نداشته باشد و یا رمز عبور اشتباه باشد، سیستم پیام «رمز عبور و یا نام کاربری اشتباه» میدهد و به ۳ برمیگردد
+\item در غیر اینصورت سیستم پیام «ورود موفق» را به کاربر نشان میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+کاربر پس از ورود با توجه به نوعش (مشتری، کارمند و یا مدیر) میتواند وارد داشبورد خود شود. (داشبورد مربوطه به عنوان یک گزینه در صفحه اولیه وجود خواهد داشت)
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+افزایش موجودی حساب ریالی و ارزی موسسه
+\item \textbf{شناسه:}\\
+25
+\item \textbf{توضیح اجمالی:}\\
+مدیر مقدار موجودی سامانه را افزایش میدهد.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مدیر وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای ورود به افزایش موجودی شروع میشود
+\item سامانه صفحه افزایش موجودی را به کاربر نمایش میدهد
+\item کاربر نوع ارز مورد نظر و مقدار افزایش را وارد میکند.
+\item کاربر افزایش را تایید میکند.
+\item  سیستم پیام «افزایش موجودی موفق» را به کاربر نشان میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+مقدار موجودی سامانه، با توجه به نوع ارز و مقدار افزایش یافته در (دیتابیس) سامانه تغییر کند.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+ایجاد کارمند جدید
+\item \textbf{شناسه:}\\
+26
+\item \textbf{توضیح اجمالی:}\\
+مدیر یک کارمند جدید تعریف میکند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+کارمند
+\item \textbf{شرایط اولیه:}\\
+کارمند به عنوان مشتری در سایت ثبت نام کرده باشد و مدیر وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست مدیر برای ورود به قسمت مشتری ها شروع میشود
+\item سامانه صفحه مشتریها را به مدیر نمایش میدهد
+\item مدیر فرد مورد نظر را پیدا کرده و گزینه تبدیل به کارمند را انتخاب میکند..
+\item  سیستم پیام «ایجاد کارمند موفق» را به کاربر نشان میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+مشتری که تبدیل به کارمند شده است بعد از ورود به سامانه میتواند وارد داشبورد کارمند شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده گزارش موجودی و گردش حساب ارزی
+\item \textbf{شناسه:}\\
+27
+\item \textbf{توضیح اجمالی:}\\
+مدیر موجودی و گردش حساب را مشاهده میکند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مدیر وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای ورود به مشاهده گزارش موجودی و گردش حساب ارزی شروع میشود
+\item سامانه صفحه مشاهده گزارش موجودی و گردش حساب ارزی را به کاربر نمایش میدهد
+\item کاربر میتواند مقدار موجودی سامانه در هر کدام از ارزها و همچنین مقدار پرداختی ها را مشاهده کند.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+تعیین میزان حقوق هر کارمند
+\item \textbf{شناسه:}\\
+28
+\item \textbf{توضیح اجمالی:}\\
+مدیر مقدار حقوق هر کارمند را تعیین میدهد.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مدیر وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تمامی  کارمندان در داشبورد شروع میشود
+\item سامانه صفحه مربوط به تمامی کارمندان را به کاربر نمایش میدهد
+\item کاربر نام هر یک از کارمندان را مشاهده میکند.
+\item  در صورتی که کاربر قسمت جزییات مربوط به هرکدام از کارمندان را انتخاب کند
+\item سامانه صفحه جزییات مربوط به کارمند را به کاربر نشان میدهد
+\item مدیر در قسمت حقوق مقدار حقوق دریافتی کارمند را تعیین میکند
+\item مدیر مقدار مشخص شده را تایید میکند
+\item سامانه پیام «تعیین حقوق موفق» را به کاربر نشان میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+مقدار حقوق کارمند در (دیتابیس) سامانه تغییر کند.
 \item \textbf{روندهای جایگزین:}\\
 ندارد
 \end{itemize}
