use cases updated

--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -923,7 +923,7 @@
 \item \textbf{شناسه:}\\
 28
 \item \textbf{توضیح اجمالی:}\\
-مدیر مقدار حقوق هر کارمند را تعیین میدهد.
+مدیر مقدار حقوق هر کارمند را تعیین میکند.
 \item \textbf{کنشگر اصلی:}\\
 مدیر
 \item \textbf{کنشگر فرعی:}\\
@@ -947,4 +947,58 @@
 ندارد
 \end{itemize}
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+ارسال خودکار پیام به مدیر در صورت ناکافی بودن اعتبار ریالی
+\item \textbf{شناسه:}\\
+29
+\item \textbf{توضیح اجمالی:}\\
+در صورتی که اعتبار ریالی سامانه کافی نباشد پیام هشدار به مدیر داده میشود.
+\item \textbf{کنشگر اصلی:}\\
+زمان
+\item \textbf{کنشگر فرعی:}\\
+مدیر
+\item \textbf{شرایط اولیه:}\\
+ندارد
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد بعد از مورد کاربردی «واریز حقوق» شروع میشود
+\item پیام «موجودی ناکافی» در داشبورد مدیر نمایش داده میشود.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+واریز حقوق
+\item \textbf{شناسه:}\\
+30
+\item \textbf{توضیح اجمالی:}\\
+حقوق کارمندان از حساب ریالی سامانه پرداخت میشود.
+\item \textbf{کنشگر اصلی:}\\
+زمان
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+ندارد
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربردی در دوره های زمانی منظم اجرا میشود.
+\item با توجه به میزان حقوق هر یک از کارمندان مقدار حقوق از حساب ریالی سامانه کم شده و به حساب ریالی کارمندان اضافه میشود.
+\item در صورتی که میزان موجودی حساب ریالی کافی نباشد مورد کاربردی «ارسال خودکار پیام به مدیر در صورت ناکافی بودن اعتبار ریالی» اجرا میشود.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+مقدار موجودی حساب ریالی سامانه و هر یک از کارمندان به درستی به روز شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
 \end{document}
