use case updated

--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -18,7 +18,7 @@
 
 
 \title{موارد کاربردی سامانه}
-\settextfont{XB Zar}
+\settextfont{XBZar}
 
 \begin{document}
 \maketitle
@@ -472,7 +472,7 @@
 \item در صورتی که موارد 5 تا9 رخ ندهد سیستم پیام «ثبت نام موفق» را به کاربر نمایش میدهد.
 \end{enumerate}
 \item \textbf{شرایط پایانی:}\\ 
-اطلاعات کاربر در (دیتابیس) سامانه به عنوان کاربر ذخیره شده باشد.
+اطلاعات کاربر در (دیتابیس) سامانه به عنوان کاربر ذخیره شده و یک شماره حساب به کاربر اختصاص داده شود.
 \item \textbf{روندهای جایگزین:}\\
 ندارد
 \end{itemize}
@@ -629,33 +629,6 @@
 \end{enumerate}
 \item \textbf{شرایط پایانی:}\\ 
 ندارد
-\item \textbf{روندهای جایگزین:}\\
-ندارد
-\end{itemize}
-\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
-
-\begin{itemize}
-\item \textbf{مورد کاربرد:}\\
-تعیین روش اطلاع رسانی به مشتری
-\item \textbf{شناسه:}\\
-19
-\item \textbf{توضیح اجمالی:}\\
-کاربر نحوه اطلاع رسانی بخود را مشخص میکند
-\item \textbf{کنشگر اصلی:}\\
-مشتری
-\item \textbf{کنشگر فرعی:}\\
-ندارد
-\item \textbf{شرایط اولیه:}\\
-کاربر وارد داشبورد مشتری شده باشد.
-\item \textbf{روند اصلی:}\\
-\begin{enumerate}
-\item  این مورد کاربرد با درخواست کاربر برای تعیین روش اطلاع رسانی در داشبورد شروع میشود
-\item سامانه صفحه انتخاب روش اطلاع رسانی را به کاربر نمایش میدهد
-\item کاربر یکی از دو گزینه اطلاع رسانی با پیامک و اطلاع رسانی با ایمیل را انتخاب میکند.
-\item  سامانه پیغام «انتخاب روش اطلاع رسانی موفق» را نمایش میدهد.
-\end{enumerate}
-\item \textbf{شرایط پایانی:}\\ 
-در (دیتابیس) سامانه روش اطلاع رسانی مربوط به کاربر با توجه به روش انتخابی اش ذخیره شود.
 \item \textbf{روندهای جایگزین:}\\
 ندارد
 \end{itemize}
@@ -1000,5 +973,222 @@
 \end{itemize}
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+صفحه ارتباط با ما
+\item \textbf{شناسه:}\\
+31
+\item \textbf{توضیح اجمالی:}\\
+کاربر می‌تواند صفحه ارتباط با ما را مشاهده کند و پیام خود را بفرستد.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+ندارد
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربردی با درخواست کاربر برای مشاهده صفحه ارتباط با ما شروع میشود
+\item سامانه صفحه ارتباط با ما را به کاربر نشان میدهد
+\item کاربر قسمت ایمیل و متن ارسالی را پر میکند
+\item در صورتی که ایمیل نا معتبر باشد یا متن خالی باشد پیام «خطا» نشان داده میشود و به ۳ برمیگردد
+\item در غیراینصورت سامانه پیام «ارسال موفق پیام» را نشان میدهد
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+پیام فرستاده شده توسط کاربر در سامانه ذخیره شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده تاریخچه فعالیتهای مدیر
+\item \textbf{شناسه:}\\
+32
+\item \textbf{توضیح اجمالی:}\\
+کاربر تاریخچه فعالیتهای خود را مشاهده کند.
+\item \textbf{کنشگر اصلی:}\\
+مدیر
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مدیر شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تاریخچه فعالیتها در داشبورد شروع میشود
+\item سامانه صفحه  تاریخچه فعالیتها را به کاربر نمایش میدهد
+\item کاربر لاگ مربوط به فعالیتها را مشاهده میکند.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+پرداخت ارزی به شماره حساب خارج از کشور
+\item \textbf{شناسه:}\\
+33
+\item \textbf{توضیح اجمالی:}\\
+درخواست مشتری برای پراخت ارزی به شماره حساب خارج از کشور در سامانه ثبت میشود.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مشتری وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست مشتری برای درخواست پرداخت خارجی شروع میشود.
+\item سامانه صفحه درخواست درخواست پرداخت خارجی را به مشتری نشان میدهد.
+\item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
+\item مشتری مقدار موردنظر برای پرداخت، نوع ارز پرداختی و شماره حساب خارجی را وارد میکند
+\item در صورتی که مقدار پرداختی بین سقف و کف مبلغ نباشد:
+\begin{enumerate}
+\item سامانه پیغام خطا «عدم رعایت کف یا سقف مبلغ» میدهد و به ۴ برمیگردد
+\end{enumerate}
+\item در غیر اینصورت مقدار کارمزد با توجه به مبلغ پرداختی محاسبه میشود و به هزینه اضافه میشود
+\item در صورتی که موجودی ارزی مشتری کمتر از مقدار هزینه باشد :
+\begin{enumerate}
+\item سامانه پیغام خطا «موجودی ناکافی» میدهد و به ۴ برمیگردد. 
+\end{enumerate}
+
+\item در غیراینصورت	:
+\begin{enumerate}
+\item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
+\item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
+\item مورد کاربردی «بررسی تراکنش» اجرا میشود.
+\end{enumerate}
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+در قسمت تراکنشهای مربوط به کارمند مسئول، تراکنش ایجاد شده در حالت در انتظار تایید اضافه شود.
+\item \textbf{روندهای جایگزین:}\\
+
+\end{itemize}
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+پرداخت ناشناس به شماره حساب داخلی
+\item \textbf{شناسه:}\\
+34
+\item \textbf{توضیح اجمالی:}\\
+درخواست مشتری برای پراخت ناشناس به شماره حساب داخلی در سامانه ثبت میشود.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مشتری وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست مشتری برای درخواست پرداخت داخلی شروع میشود.
+\item سامانه صفحه درخواست درخواست پرداخت داخلی را به مشتری نشان میدهد
+\item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
+\item مشتری مقدار موردنظر برای پرداخت، شماره حساب داخلی و ایمیل یا شماره تلفن مقصد را وارد میکند
+\item  در صورتی که مقدار پرداخت یا شماره حساب داخلی یا هردوی ایمیل و شماره تلفن خالی باشند و یا فرمت تلفن و یا ایمیل اشتباه باشد:
+\begin{enumerate}
+\item سامانه پیغام خطا «ورود اشتباه اطلاعات» میدهد و به ۴ برمیگردد. 
+\end{enumerate}
+
+\item در صورتی که مقدار پرداختی بین سقف و کف مبلغ نباشد:
+\begin{enumerate}
+\item سامانه پیغام خطا «عدم رعایت کف یا سقف مبلغ» میدهد و به ۴ برمیگردد
+\end{enumerate}
+
+\item در غیر اینصورت مقدار کارمزد با توجه به مبلغ پرداختی محاسبه میشود و به هزینه اضافه میشود
+\item در صورتی که موجودی مشتری کمتر از مقدار هزینه باشد :
+\begin{enumerate}
+\item سامانه پیغام خطا «موجودی ناکافی» میدهد و به ۴ برمیگردد. 
+\end{enumerate}
+
+\item در غیراینصورت	:
+\begin{enumerate}
+\item در صورتی که شماره حساب داخلی موجود نباشد:
+\begin{enumerate}
+\item سامانه کاربری با ایمیل یا شماره تلفن داده شده و شماره حساب داده شده ایجاد میکند
+\item سامانه مقدار پرداختی را از حساب مبدا کم و به حساب مقصد اضافه میکند
+\item سامانه با توجه به ایمیل یا شماره تلفن به فرد مقصد پیام «ایجاد حساب و نیاز به تکمیل اطلاعات» میدهد
+\end{enumerate}
+\item در غیراینصورت:
+\begin{enumerate}
+\item سامانه مقدار پرداختی را از حساب مبدا کم و به حساب مقصد اضافه میکند
+\item سامانه با توجه به شیوه اطلاع رسانی فرد مقصد نوتیفیکیشن با پیام «واریز پول» میدهد
+\end{enumerate}
+\item سامانه پیام «پرداخت موفق» را به کاربر نمایش میدهد.
+\end{enumerate}
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+در صورتی که حساب داخلی ناموجود بود، ایجاد شود (در (دیتابیس) سامانه)\\
+مقدار پرداختی از حساب مبدا کم و به حساب مقصد اضافه شده باشد (در (دیتابیس) سامانه)
+\item \textbf{روندهای جایگزین:}\\
+
+\end{itemize}
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+برداشت ریالی از کیف پول و انتقال به حساب بانکی داخلی
+\item \textbf{شناسه:}\\
+35
+\item \textbf{توضیح اجمالی:}\\
+درخواست مشتری برای برداشت ریالی از کیف پول و انتقال به حساب بانکی داخلی در سامانه ثبت میشود.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مشتری وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست مشتری برای درخواست برداشت ریالی شروع میشود.
+\item سامانه صفحه درخواست درخواست برداشت ریالی را به مشتری نشان میدهد.
+\item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
+\item مشتری مقدار موردنظر برای برداشت و شماره حساب بانکی داخلی را وارد میکند
+\item در صورتی که مقدار برداشت بین سقف و کف مبلغ نباشد:
+\begin{enumerate}
+\item سامانه پیغام خطا «عدم رعایت کف یا سقف مبلغ» میدهد و به ۴ برمیگردد
+\end{enumerate}
+\item در غیر اینصورت مقدار کارمزد با توجه به مبلغ محاسبه میشود و به هزینه اضافه میشود
+\item در صورتی که موجودی ریالی مشتری کمتر از مقدار هزینه باشد :
+\begin{enumerate}
+\item سامانه پیغام خطا «موجودی ناکافی» میدهد و به ۴ برمیگردد. 
+\end{enumerate}
+
+\item در غیراینصورت	:
+\begin{enumerate}
+\item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
+\item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
+\item مورد کاربردی «بررسی تراکنش» اجرا میشود.
+\end{enumerate}
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+در قسمت تراکنشهای مربوط به کارمند مسئول، تراکنش ایجاد شده در حالت در انتظار تایید اضافه شود.
+\item \textbf{روندهای جایگزین:}\\
+
+\end{itemize}
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 
 \end{document}
