--- a/documents/design/use_case/use cases.tex
+++ b/documents/design/use_case/use cases.tex
@@ -22,6 +22,20 @@
 
 \begin{document}
 \maketitle
+\section{معرفی کنشگرها}
+\begin{itemize}
+\item مشتری: مشتریها قابلیت ورود به سامانه و ایجاد حساب کاربری، ورود و ویرایش اطلاعات و ثبت درخواستهای تعریف شده توسط سیستم را دارند
+\item کارمند: کارمندان وظیفه بررسی و تایید(رد) درخواستهای مشتریان و انجام آنها(در صورت تایید) و همچنین اطلاع موارد غیرعادی به مدیر را دارند.
+\item مدیر: مدیر توانایی نظارت بر عملکرد مشتریها و کارمندان، لغو دسترسی آنها، ایجاد تراکنشهای جدید، تغییر قوانین، نظارت مالی بر سامانه و ایجاد کارمند و تعیین حقوق آنها را دارد
+\end{itemize}
+\section{نمودار موارد کاربرد}
+\includegraphics[width=17cm]{./Diagrams/all.png}
+\newpage
+\subsection{روابط بین کنشگرها}
+\begin{center}
+\includegraphics[scale=0.5]{./Diagrams/actors.png}
+\end{center}
+\section{توضیحات موارد کاربرد}
 \begin{itemize}
 \item \textbf{مورد کاربرد:}\\
 مشاهده ی صفحه معرفی موسسه
@@ -173,7 +187,7 @@
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
 \item مورد کاربردی با درخواست مدیر در «ایجاد تراکنش معتبر دلخواه» شروع میشود: 
-\item پیغام نوتیفیکیشن برابر با پیغام وارد شده توسط مدیر میشود.
+\item پیغام نوتیفیکیشن توسط مدیر پر میشود.
 \item تمام مشتری ها به عنوان مشتری مقصد انتخاب میشوند.
 \item با توجه به شیوه اطلاع رسانی ثبت شده توسط هر کدام از مشتری های مقصد پیغام مربوطه به آنها ارسال میشود.
 \end{enumerate}
@@ -200,8 +214,8 @@
 کارمند وارد داشبورد کارمند شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
-\item مورد کاربردی با درخواست کارمند در «بررسی تراکنش» یا «تایید تراکنش» شروع میشود
-\item پیغام نوتیفیکیشن برابر با پیغام وارد شده توسط کارمند میشود.
+\item مورد کاربردی با درخواست کارمند در «بررسی تراکنش» شروع میشود
+\item پیغام نوتیفیکیشن توسط کارمند وارد میشود.
 \item مشتری مقصد برابر با مشتری در مورد کاربردی «بررسی تراکنش» یا «تایید تراکنش» میشود.
 \item با توجه به شیوه اطلاع رسانی ثبت شده توسط مشتری مقصد پیغام مربوطه ارسال میشود.
 \end{enumerate}
@@ -242,7 +256,6 @@
 \end{enumerate}
 \item  درصورتی که مدیر گزینه ارسال نوتیفیکیشن را انتخاب کند:
 \begin{enumerate}
-\item مدیر پیام نوتیفیکیشن را وارد کرده و تایید میکند.
 \item مورد کابردی «ارسال نوتیفیکیشن مدیر» انجام میشود.
 \end{enumerate}
 \item سامانه پیغام ایجاد موفق تراکنش را نشان میدهد.
@@ -389,7 +402,6 @@
 \item کارمند وضعیت درخواست را به درحال رسیدگی تغییر میدهد.
 \item هزینه تراکنش و کارمزد آن محاسبه میشود
 \item هزینه محاسبه شده از حساب ریالی مشتری کم شده و به حساب ریالی شرکت اضافه میشود
-\item کارمند پیغام مربوط به نوتیفیکیشن را وارد میکند
 \item کارمند ارسال نوتیفیکیشن را تایید میکند
 \item مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود.
 \end{enumerate}
@@ -397,7 +409,6 @@
 \begin{enumerate}
 \item  در صورتی که کارمند مورد غیر عادی متوجه شود وضعیت تراکنش را غیرعادی میکند.
 \item در غیر این صورت وضعیت تراکنش را لغوشده اعلام میکند.
-\item کارمند پیغام مربوط به نوتیفیکیشن را وارد میکند
 \item کارمند ارسال نوتیفیکیشن را تایید میکند
 \item مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود.
 \end{enumerate}
