use cases updated

--- a/documents/design/use_case/use cases.tex
+++ b/documents/design/use_case/use cases.tex
@@ -285,34 +285,25 @@
 \begin{enumerate}
 \item  این مورد کاربرد با درخواست مشتری برای ثبت درخواست جدید شروع میشود.
 \item سامانه صفحه درخواست جدید را به مشتری نشان میدهد.
-\item مشتری نوع آزمون مورد نظر را انتخاب میکند.
-\item سامانه اطلاعات موردنیاز برای ثبت نام را به مشتری نمایش میدهد
+\item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
 \item مشتری اطلاعات موردنیاز را وارد میکند(یا به صورت متن یا به صورت فایل)
-\item سامانه هزینه ثبت نام را به مشتری نمایش میدهد
-\item مشتری درخواست خود را ثبت میکند
-\item در صورتی که موجودی مشتری کمتر از هزینه ثبت نام باشد سامانه :
+\item سامانه کارمزد درخواست ثبت شده را محاسبه میکند و به همراه سقف و کف مبلغ ممکن به کاربر نشان میدهد
+\item در صورتی که هزینه محاسبه شده بیش از موجودی کیف پول مشتری باشد یا کف و سقف مبلغ رعایت نشود:
 \begin{enumerate}
-\item سامانه پیغام خطا میدهد و روند جایگزین ۱ انجام میشود. 
+\item سامانه پیغام خطا به مشتری میدهد
 \end{enumerate}
-
-\item در غیراینصورت	:
+\item درغیر اینصورت:
 \begin{enumerate}
+\item مشتری درخواست خود را ثبت میکند
 \item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
 \item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
 \item مورد کاربردی «بررسی تراکنش» اجرا میشود.
 \end{enumerate}
 
 \end{enumerate}
-
 \item \textbf{شرایط پایانی:}\\ 
 در قسمت تراکنشهای مربوط به کارمند مسئول، تراکنش ایجاد شده در حالت در انتظار تایید اضافه شود.
 \item \textbf{روندهای جایگزین:}\\
-روند ۱:\\
-\begin{enumerate}
-\item پیغام ورود به کیف پول نمایش داده میشود.
-\item کاربر ورود به کیف پول را تایید میکند.
-\item مورد کاربردی «افزایش اعتبار ریالی کیف پول» اجرا میشود.؟؟
-\end{enumerate}
 
 \end{itemize}
 
@@ -338,32 +329,23 @@
 \item سامانه صفحه درخواست جدید را به مشتری نشان میدهد.
 \item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
 \item مشتری اطلاعات موردنیاز را وارد میکند(یا به صورت متن یا به صورت فایل)
-\item سامانه هزینه ثبت نام را به مشتری نمایش میدهد
-\item مشتری درخواست خود را ثبت میکند
-\item در صورتی که موجودی مشتری کمتر از هزینه ثبت نام باشد سامانه :
+\item سامانه کارمزد درخواست ثبت شده را محاسبه میکند و به همراه سقف و کف مبلغ ممکن به کاربر نشان میدهد
+\item در صورتی که هزینه محاسبه شده بیش از موجودی کیف پول مشتری باشد یا کف و سقف مبلغ رعایت نشود:
 \begin{enumerate}
-\item سامانه پیغام خطا میدهد و روند جایگزین ۱ انجام میشود. 
+\item سامانه پیغام خطا به مشتری میدهد
 \end{enumerate}
-
-\item در غیراینصورت	:
+\item درغیر اینصورت:
 \begin{enumerate}
+\item مشتری درخواست خود را ثبت میکند
 \item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
 \item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
 \item مورد کاربردی «بررسی تراکنش» اجرا میشود.
 \end{enumerate}
 
 \end{enumerate}
-
 \item \textbf{شرایط پایانی:}\\ 
 در قسمت تراکنشهای مربوط به کارمند مسئول، تراکنش ایجاد شده در حالت در انتظار تایید اضافه شود.
 \item \textbf{روندهای جایگزین:}\\
-روند ۱:\\
-\begin{enumerate}
-\item پیغام ورود به کیف پول نمایش داده میشود.
-\item کاربر ورود به کیف پول را تایید میکند.
-\item مورد کاربردی «افزایش اعتبار ریالی پول » اجرا میشود.؟؟
-\end{enumerate}
-
 \end{itemize}
 
 
@@ -389,7 +371,8 @@
 \item کارمند یکی از درخواست ها را انتخاب میکند.
 \item در صورتی که وضعیت درخواست درانتظار تایید نباشد:
 \begin{enumerate}
-\item در همان صفحه میماند و وارد وضعیت ۳ میشود.
+\item سامانه صفحه مربوط به اطلاعات درخواست مشتری را به کاربر نشان میدهد
+\item کارمند اطلاعات مشتری را مشاهده میکند
 \end{enumerate}
 \item در غیر این صورت:
 \begin{enumerate}
@@ -398,18 +381,15 @@
 \item در صورت صحت اطلاعات:
 \begin{enumerate}
 \item کارمند وضعیت درخواست را به درحال رسیدگی تغییر میدهد.
-\item هزینه تراکنش و کارمزد آن محاسبه میشود
 \item هزینه محاسبه شده از حساب ریالی مشتری کم شده و به حساب ریالی شرکت اضافه میشود
-\item کارمند ارسال نوتیفیکیشن را تایید میکند
-\item مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود.
 \end{enumerate}
 \item در غیر اینصورت:
 \begin{enumerate}
 \item  در صورتی که کارمند مورد غیر عادی متوجه شود وضعیت تراکنش را غیرعادی میکند.
 \item در غیر این صورت وضعیت تراکنش را لغوشده اعلام میکند.
-\item کارمند ارسال نوتیفیکیشن را تایید میکند
-\item مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود.
 \end{enumerate}
+\item پیام تغییر وضعیت نشان داده میشود
+\item  در صورتی که کارمند ارسال نوتیفیکیشن را تایید کند مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود
 \end{enumerate}
 
 \end{enumerate}
@@ -1054,22 +1034,18 @@
 مشتری وارد داشبورد شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
-\item  این مورد کاربرد با درخواست مشتری برای درخواست پرداخت خارجی شروع میشود.
-\item سامانه صفحه درخواست درخواست پرداخت خارجی را به مشتری نشان میدهد.
+\item  این مورد کاربرد با درخواست مشتری برای ثبت درخواست جدید شروع میشود.
+\item سامانه صفحه درخواست جدید را به مشتری نشان میدهد.
 \item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
-\item مشتری مقدار موردنظر برای پرداخت، نوع ارز پرداختی و شماره حساب خارجی را وارد میکند
-\item در صورتی که مقدار پرداختی بین سقف و کف مبلغ نباشد:
+\item مشتری اطلاعات موردنیاز را وارد میکند(یا به صورت متن یا به صورت فایل)
+\item سامانه کارمزد درخواست ثبت شده را محاسبه میکند و به همراه سقف و کف مبلغ ممکن به کاربر نشان میدهد
+\item در صورتی که هزینه محاسبه شده بیش از موجودی کیف پول مشتری باشد یا کف و سقف مبلغ رعایت نشود:
 \begin{enumerate}
-\item سامانه پیغام خطا «عدم رعایت کف یا سقف مبلغ» میدهد و به ۴ برمیگردد
+\item سامانه پیغام خطا به مشتری میدهد
 \end{enumerate}
-\item در غیر اینصورت مقدار کارمزد با توجه به مبلغ پرداختی محاسبه میشود و به هزینه اضافه میشود
-\item در صورتی که موجودی ارزی مشتری کمتر از مقدار هزینه باشد :
+\item درغیر اینصورت:
 \begin{enumerate}
-\item سامانه پیغام خطا «موجودی ناکافی» میدهد و به ۴ برمیگردد. 
-\end{enumerate}
-
-\item در غیراینصورت	:
-\begin{enumerate}
+\item مشتری درخواست خود را ثبت میکند
 \item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
 \item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
 \item مورد کاربردی «بررسی تراکنش» اجرا میشود.
@@ -1168,22 +1144,18 @@
 مشتری وارد داشبورد شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
-\item  این مورد کاربرد با درخواست مشتری برای درخواست برداشت ریالی شروع میشود.
-\item سامانه صفحه درخواست درخواست برداشت ریالی را به مشتری نشان میدهد.
+\item  این مورد کاربرد با درخواست مشتری برای ثبت درخواست جدید شروع میشود.
+\item سامانه صفحه درخواست جدید را به مشتری نشان میدهد.
 \item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
-\item مشتری مقدار موردنظر برای برداشت و شماره حساب بانکی داخلی را وارد میکند
-\item در صورتی که مقدار برداشت بین سقف و کف مبلغ نباشد:
+\item مشتری اطلاعات موردنیاز را وارد میکند(یا به صورت متن یا به صورت فایل)
+\item سامانه کارمزد درخواست ثبت شده را محاسبه میکند و به همراه سقف و کف مبلغ ممکن به کاربر نشان میدهد
+\item در صورتی که هزینه محاسبه شده بیش از موجودی کیف پول مشتری باشد یا کف و سقف مبلغ رعایت نشود:
 \begin{enumerate}
-\item سامانه پیغام خطا «عدم رعایت کف یا سقف مبلغ» میدهد و به ۴ برمیگردد
+\item سامانه پیغام خطا به مشتری میدهد
 \end{enumerate}
-\item در غیر اینصورت مقدار کارمزد با توجه به مبلغ محاسبه میشود و به هزینه اضافه میشود
-\item در صورتی که موجودی ریالی مشتری کمتر از مقدار هزینه باشد :
+\item درغیر اینصورت:
 \begin{enumerate}
-\item سامانه پیغام خطا «موجودی ناکافی» میدهد و به ۴ برمیگردد. 
-\end{enumerate}
-
-\item در غیراینصورت	:
-\begin{enumerate}
+\item مشتری درخواست خود را ثبت میکند
 \item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
 \item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
 \item مورد کاربردی «بررسی تراکنش» اجرا میشود.
